--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.adverto.dejonghe.application
 spring.jpa.defer-datasource-initialization = true
+
+spring.data.mongodb.uri=mongodb://sanne:sanne@localhost:27017/admin
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=dejonghe
+
+linkSpreadsheetBulk = /Users/bramvandenberghe/Desktop/dejonghe.xlsx
