Finish WorkOrder. Start change ProductView (Split Import en Change Product)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,18 @@ spring.mustache.check-template-location = false
 vaadin.launch-browser=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
-vaadin.allowed-packages = com.vaadin,org.vaadin,com.adverto.dejonghe.application
+vaadin.allowed-packages = com.vaadin,org.vaadin,com.adverto.dejonghe.application,dev.hilla,com.flowingcode
 spring.jpa.defer-datasource-initialization = true
 
 spring.data.mongodb.uri=mongodb://sanne:sanne@localhost:27017/admin
+#spring.data.mongodb.uri=mongodb://DejongheTechniek:Yngwie1983_Biprom@localhost:27017/admin
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=dejonghe
 
-linkSpreadsheetBulk = /Users/bramvandenberghe/Desktop/dejonghe.xlsx
+spring.main.allow-circular-references = true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+#linkSpreadsheetBulk = /Users/bramvandenberghe/Desktop/dejonghe.xlsx
+#linkSpreadsheetBulk = C:\\dejonghe\\dejonghe.xlsx
+
