--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,20 @@ vaadin.launch-browser=true
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.adverto.dejonghe.application,dev.hilla,com.flowingcode
 spring.jpa.defer-datasource-initialization = true
 
-spring.data.mongodb.uri=mongodb://sanne:sanne@localhost:27017/admin
-#spring.data.mongodb.uri=mongodb://DejongheTechniek:Yngwie1983_Biprom@localhost:27017/admin
+#spring.data.mongodb.uri=mongodb://sanne:sanne@localhost:27017/admin
+spring.data.mongodb.uri=mongodb://DejongheTechniek:Yngwie1983_Biprom@localhost:27017/admin
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=dejonghe
 
 spring.main.allow-circular-references = true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+#rootFolder = C:\\kabba\\
+rootFolder = /Users/bramvandenberghe/Documents/Documenten - MacBook Pro van Bram/Biprom/Biprom Software/Klanten/dejonghe/
+
+#rootTemplateInvoice = C:\\kabba\\templates\\factuur.jrxml
+rootTemplateInvoice = /Users/bramvandenberghe/Documents/Documenten - MacBook Pro van Bram/Biprom/Biprom Software/Klanten/dejonghe/factuur.jrxml
 
 #linkSpreadsheetBulk = /Users/bramvandenberghe/Desktop/dejonghe.xlsx
 #linkSpreadsheetBulk = C:\\dejonghe\\dejonghe.xlsx
