--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,12 +18,16 @@ spring.main.allow-circular-references = true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-#rootFolder = C:\\kabba\\
+#rootFolder = C:\\dejonghe\\
 rootFolder = /Users/bramvandenberghe/Documents/Documenten - MacBook Pro van Bram/Biprom/Biprom Software/Klanten/dejonghe/
 
-#rootTemplateInvoice = C:\\kabba\\templates\\factuur.jrxml
+#rootTemplateInvoice = C:\\dejonghe\\templates\\factuur.jrxml
 rootTemplateInvoice = /Users/bramvandenberghe/Documents/Documenten - MacBook Pro van Bram/Biprom/Biprom Software/Klanten/dejonghe/factuur.jrxml
 
-#linkSpreadsheetBulk = /Users/bramvandenberghe/Desktop/dejonghe.xlsx
+#rootTemplateAttachement = C:\\dejonghe\\templates\\bijlage.jrxml
+rootTemplateAttachement = /Users/bramvandenberghe/Documents/Documenten - MacBook Pro van Bram/Biprom/Biprom Software/Klanten/dejonghe/bijlage.jrxml
+
 #linkSpreadsheetBulk = C:\\dejonghe\\dejonghe.xlsx
+linkSpreadsheetBulk = /Users/bramvandenberghe/Desktop/dejonghe.xlsx
+
 
